config/manifests/overlays/crc-aws/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
  name: demo-soa
  namespace: demo-soa
spec:
  host: demo-soa.apps-crc.testing
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: demo-soa-nginx-ingress
    weight: 100
  wildcardPolicy: None
